[B]Version 1.1.93[/B]
- chaturbate enable online favourites menu
- rule34 tags fix and add categories menu